--- a/client/src/Components/Bio/Bio.css
+++ b/client/src/Components/Bio/Bio.css
@@ -1,6 +1,6 @@
 #bio-wrapper {
   font-family: "Tajawal";
-  background-color: #004059;
+  background-color: rgba(0, 64, 89, .9);
   border-radius: 15px;
   border: 3px solid #5dc21e;
   color: #5dc21e;
