--- a/client/src/Components/Bio/Bio.css
+++ b/client/src/Components/Bio/Bio.css
@@ -1,6 +1,6 @@
 #bio-wrapper {
   font-family: "Tajawal";
-  background-color: rgba(0, 64, 89, .9);
+  background-color: rgba(0,0,0,.7);
   border-radius: 15px;
   border: 3px solid #5dc21e;
   color: #5dc21e;
@@ -10,4 +10,14 @@
   font-family: "Press Start 2P";
   padding: 10px auto;
   margin: 10px auto;
+}
+
+#user-bio {
+  font-size: 18px;
+  margin: 15px;
+}
+
+#achievement-list {
+  margin-left: 15px;
+  font-size: 15px;
 }
